# data-preprocess

./: .gitignore  LICENSE.md  README.md  categorical-nominal.py  categorical-ordinal.py  numerical-continuous.py  numerical-discrete.py  pyproject.toml
datapreprocessing/: README.md  categorical_ordinal.py  datapreprocess.py  init.py  numerical_discrete.py
documentation/: github readme draft.txt  plan.txt
tests/: Untitled.ipynb
